<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="colo_herminia.app_millonario.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:id="@+id/playLayout">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bPlay"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableBottom="@drawable/play"
                    style="@style/DashboardButton"
                    android:onClick="dashboardButtonClicked (MainActivity)" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txPlay"
                    android:textAlignment="center"
                    android:layout_gravity="center_vertical"
                    android:textStyle="normal|bold"
                    tools:text="@string/play_text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/scoresLayout">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bScores"
                    android:background="@android:color/transparent"
                    android:drawableBottom="@drawable/scores"
                    style="@style/DashboardButton"
                    android:onClick="dashboardButtonClicked (MainActivity)" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txScores"
                    tools:text="@string/scores_text"
                    android:layout_gravity="center_vertical"
                    android:textStyle="normal|bold"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/settingsLayout">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="139dp"
                    android:id="@+id/bSettings"
                    android:background="@android:color/transparent"
                    android:drawableBottom="@drawable/settings"
                    style="@style/DashboardButton"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvSettings"
                    tools:text="@string/settings_text"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textStyle="normal|bold"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
